// Copyright Â© 2017 The Things Network
// Use of this source code is governed by the MIT license that can be found in the LICENSE file.

syntax = "proto3";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/TheThingsNetwork/ttn/api/api.proto";

package status;

option go_package = "github.com/TheThingsNetwork/gateway-connector-bridge/status";

message StatusRequest {}

message StatusResponse {
  api.SystemStats     system              = 1;
  api.ComponentStats  component           = 2;
  api.Rates           gateway_status      = 11;
  api.Rates           uplink              = 12;
  api.Rates           downlink            = 13;
  uint32              connected_gateways  = 21;
}

service Status {
  rpc GetStatus(StatusRequest) returns (StatusResponse);
}
